--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dropdown-select": "^4.9.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
