--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-confirm-alert": "^3.0.6",
+    "react-date-picker": "^9.2.0",
+    "react-dropdown-select": "^4.9.3",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
     "web-vitals": "^2.1.4"
