--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-bootstrap": "^2.7.2",
     "react-confirm-alert": "^3.0.6",
     "react-date-picker": "^9.2.0",
